--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,12 +1,10 @@
 {
   "name": "Orbix Codespace",
-  "image": "mcr.microsoft.com/devcontainers/python:3.10-node",
+  "image": "mcr.microsoft.com/devcontainers/python:3.10",
   "features": {
     "ghcr.io/devcontainers/features/node:1": {
+      "nodeGypDependencies": true,
       "version": "18"
-    },
-    "ghcr.io/devcontainers/features/python:1": {
-      "version": "3.10"
     }
   },
   "postCreateCommand": "npm install && pip install flask gunicorn",
