--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "http-proxy-middleware": "^2.0.9"
+    "dotenv": "^17.0.1",
+    "express": "^4.21.2",
+    "http-proxy-middleware": "^2.0.9",
+    "pg": "^8.16.3"
   },
   "keywords": [
     "orbix",
